C++ sources and headers.

** Custom
+++
*** defcustom accepts new keyword arguments, `:safe' and `:risky', which
set a variable's `safe-local-variable' and `risky-local-variable' property.

** Diff mode

*** diff-refine-hunk highlights word-level details of changes in a diff hunk.
It's used automatically as you move through hunks, see
diff-auto-refine.  It is bound to `C-c C-b'.

*** diff-add-change-log-entries-other-window iterates through the diff
buffer and tries to create ChangeLog entries for each change.
It is bound to `C-x 4 A'.

** Fortran
*** The variable `fortran-line-length' can change the fixed-form line-length.

*** In Fortran mode, M-; is now bound to the standard comment-dwim,
rather than fortran-indent-comment.

+++
*** (The increasingly misnamed) F90 mode supports Fortran 2003 syntax.

** Gnus

*** The Gnus package has been updated
There are many news features, bug fixes and improvements; see the file
GNUS-NEWS or the node "No Gnus" in the Gnus manual for details.

*** In Emacs 23, Gnus uses Emacs' new internal coding system `utf-8-emacs' for
saving articles drafts and ~/.newsrc.eld.  These file may not be read
correctly in Emacs 22 and below.  If you want to Gnus across different Emacs
versions, you may set `mm-auto-save-coding-system' to `emacs-mule'.

** Help mode
*** New macro `with-help-window' should set up help windows better
than `with-output-to-temp-buffer' with `print-help-return-message'.
*** New option `help-window-select' permits to customize whether help
window shall be automatically selected when invoking help.
*** New variable `help-window-point-marker' permits to specify new
position of point in help window (for example in `view-lossage').

** Isearch

*** New command `isearch-highlight-regexp' bound to `M-s h r'
in isearch mode runs `highlight-regexp' (`hi-lock-face-buffer')
with the current search string as its regexp argument.

*** New command `isearch-occur' bound to `M-s o' in isearch mode